--- a/style.css
+++ b/style.css
@@ -1,16 +1,25 @@
+
 * {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
 }
 
+body {
+    background-color: #66ccff;
+}
+
 #canvas1 {
-    border: 5px solid black;
+    /* border: 2px solid black; */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgb(110, 154, 247);
+    background-color:#003366;
     max-width: 100%;
     max-height: 100%; 
+}
+
+#layer1, #layer2, #layer3, #layer4 {
+    display: none;
 }
