--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #66ccff;
+    background-color: #43047d;
 }
 
 #canvas1 {
@@ -15,7 +15,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color:#003366;
+    background-color:#3636d5;
     max-width: 100%;
     max-height: 100%; 
 }
