--- a/style.css
+++ b/style.css
@@ -1,25 +1,38 @@
-
 * {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #1d8ff27a;
-    overflow: hidden;
+  background-color: #1d8ff27a;
+  overflow: hidden;
 }
 
 #canvas1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: linear-gradient(180deg, #00d2ff 0%, #3a47d5 100%);
-    max-width: 100%;
-    max-height: 100%; 
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(180deg, #00d2ff 0%, #3a47d5 100%);
+  max-width: 100%;
+  max-height: 100%;
 }
 
-#background1, #background2, #playerSwimming, #jellyFish, #coin , #idleplayer, #playerAttack, #poisionBubble{
-    display: none;
+#layer1,
+#layer2,
+#layer3,
+#layer4,
+#layer5,
+#layer6,
+#layer7,
+#background1,
+#background2,
+#playerSwimming,
+#jellyFish,
+#coin,
+#idleplayer,
+#playerAttack,
+#poisionBubble {
+  display: none;
 }
