--- a/style.css
+++ b/style.css
@@ -195,6 +195,52 @@ body {
   8px 8px #4A43AE,
   0 0 10px rgba(0, 0, 0, 0.5);
 }
+.died-screen {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0;
+  width: 100%; 
+  height: 100%; 
+  background: #1616669a;
+  z-index: 1000;
+  display: flex;
+  display: none;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+}
+
+.died-message {
+    color: white;
+    font-size: 92px;
+    font-family: 'Fredoka One';
+    white-space: nowrap;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+}
+
+.try-again {
+  width: 200px;
+  background-color: #9FC805;
+  border-radius: 10px;
+  height: 45px;
+  font-size: 20px;
+  box-shadow: 0px 4px #718E04;
+  text-shadow: 0px 2px 2px #718E04;
+  position: relative;
+  bottom: 0;
+  transition: .1s;
+  cursor: pointer;
+  font-weight: 600;
+  letter-spacing: 1px;
+  text-align: center;
+}
+
 
 #playButton {
   width:250px;
@@ -213,6 +259,42 @@ body {
 
 #playButton:hover {
   box-shadow: none;
+}
+
+.tutorial-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 400px;
+  width: 600px;
+  background: #051346;
+  border-radius: 20px;
+  padding: 15px;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+  z-index: 2000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: none;
+}
+
+.ok {
+  width: 200px;
+  background-color: #9FC805;
+  border-radius: 10px;
+  height: 45px;
+  font-size: 20px;
+  box-shadow: 0px 4px #718E04;
+  text-shadow: 0px 2px 2px #718E04;
+  position: relative;
+  bottom: 0;
+  transition: .1s;
+  cursor: pointer;
+  font-weight: 600;
+  letter-spacing: 1px;
+  text-align: center;
 }
 
 @keyframes breathing {
