--- a/style.css
+++ b/style.css
@@ -333,6 +333,8 @@ body {
   display: none;
 }
 
+
+
 /* style.css */
 table {
   border-collapse: separate;
@@ -432,7 +434,7 @@ td, th {
 #quest-dialog-container img {
   height: 180px;
   background: #0822816f;
-  border: 2px solid white;
+  border: 1px solid white;
   width: 100%;
   object-fit: contain;
   border-radius: 20px;
@@ -487,3 +489,20 @@ td, th {
 #poisionBubble {
   display: none;
 }
+
+.footer {
+  position: absolute;
+  bottom:0;
+  width:100%;
+  padding: 10px;
+  display:  block;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.footer a {
+  color: white;
+  font-weight: 700;
+}
+
